--- a/apps/employer/package.json
+++ b/apps/employer/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.5",
+    "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24",
     "ui": "workspace:*"
   },
   "devDependencies": {
