--- a/jobs/package.json
+++ b/jobs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+ 
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -17,11 +18,20 @@
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.14.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",   
+    "@next/eslint-plugin-next": "^12.1.6"
   }
 }
