--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
- 
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -31,7 +31,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.4",   
-    "@next/eslint-plugin-next": "^12.1.6"
+    "typescript": "4.6.4",
+    "@next/eslint-plugin-next": "^12.1.6",
+    "husky": "^7.0.0"
   }
 }
