--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "tsc-files": "^1.1.3"
   },
   "devDependencies": {
