--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reach/dialog": "^0.17.0",
+    "@tanstack/react-table": "8.0.0-alpha.67",
+    "@tippyjs/react": "^4.2.6",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
+    "react-query": "^3.38.1",
     "tsc-files": "^1.1.3"
   },
   "devDependencies": {
